# drone_mapper_ex2

./: .gitignore  CMakeLists.txt  EX2_HANDOFF-useForEx3.md  INTERVIEW_PREP.md  README.md  ids.txt  readme.txt
docs/: HLD.md
include/drone_mapper/: CompositionParser.h  DroneControlImpl.h  IDroneControl.h  IDroneMovement.h  IGPS.h  ILidar.h  IMap3D.h  IMappingAlgorithm.h  IMissionControl.h  IMutableMap3D.h  ISimulation.h  ISimulationRun.h  ISimulationRunFactory.h  Map3DImpl.h  MappingAlgorithmImpl.h  MapsComparison.h  MissionControlImpl.h  MockGPS.h  MockLidar.h  MockMovement.h  ScanResultToVoxels.h  SimulationManager.h  SimulationRunFactoryImpl.h  SimulationRunImpl.h  Types.h  Units.h
include/drone_mapper/types/: DroneTypes.h  LidarTypes.h  MapTypes.h  MissionTypes.h  SimulationTypes.h
inputs/mission/: house_mission_full.yaml  house_mission_lower.yaml
inputs/simulation/: house_simulation.yaml
src/: CompositionParser.cpp  DroneControlImpl.cpp  Map3DImpl.cpp  MappingAlgorithmImpl.cpp  MapsComparison.cpp  MissionControlImpl.cpp  MockGPS.cpp  MockLidar.cpp  MockMovement.cpp  ScanResultToVoxels.cpp  SimulationManager.cpp  SimulationRunFactoryImpl.cpp  SimulationRunImpl.cpp  drone_mapper_simulation_main.cpp  maps_comparison_main.cpp
tests/: smoke_test.cpp
tests/components/: DroneControlTest.cpp  FakeGps.h  FakeMap3D.h  Map3DTest.cpp  MappingAlgorithmTest.cpp  MapsComparisonTest.cpp  MissionControlTest.cpp  MockLidarTest.cpp  ScanResultToVoxelsTest.cpp  SimulationManagerTest.cpp  SimulationRunTest.cpp
tests/integration/: BenchmarkMapIntegrationTest.cpp  MockAlgorithmIntegrationTest.cpp  SimulationEndToEndTest.cpp
